. [NEW] CCNode: added convenience method setAnchorPointWithoutPositionChange, to change a relative anchor point but not change the position of the node.
. [NEW] CCSprite: added useTrimmedFrameForAnchorPoint property. This makes the trimmed frame frame of reference for the anchorpoint and contentSize.
. [NEW] DrawPrimitives: added inPixels versions of each function. 
. [NEW] ActionsTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
. [NEW] ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move
. [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
. [FIX] Actions:
        CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
        CCActionTween: fixed missing copyWithZone
        CCRepeatForever: has a stop method now (issue #945)
. [FIX] ActionManager: always calls stop on a action that must be removed (issue #945)
. [FIX] CCDirector: exceptions raised in runloop didn't cause program to abort (issue #911)
. [FIX] CCNode: onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
. [FIX] CCSprite: CCSprite bug in setDisplayFrameWithAnimationName
. [FIX] CCParticleSystem: unschedule update method when deallocated
. [FIX] CCParticleSystem: incorrect position of free and relative particles when emitter is scaled (issue #1352)
. [FIX] CCParticleSystemQuad: Changed animation property to particleAnimation, for compiler warning
. [FIX] CCRenderTexture: fixed new getUIImageFromBuffer implementation
. [FIX] CCTouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
. [FIX] CCGrabber: added log message to warn that grabber doesn't support transparent parts with a color buffer of RGB565
. [FIX] Compiler: fixed unrecognised clang pragmas so cocos can still be compiled with LLVM version < 2.0. 