@@ -6,8 +6,9 @@ version 1.1-rc0 ..-..-2012
 . [NEW] CCNode: added convenience method setAnchorPointWithoutPositionChange, to change a relative anchor point but not change the position of the node.
 . [NEW] CCSprite: added useTrimmedFrameForAnchorPoint property. This makes the trimmed frame frame of reference for the anchorpoint and contentSize.
 . [NEW] DrawPrimitives: added inPixels versions of each function. 
+. [NEW] Menu: added reverseOrder, to reverse order of touch detection (issue #1125) 
 . [NEW] ActionsTest: added test case for issue #1020, synchronizing of several animations each within a CCRepeatForever
-. [NEW] ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move
+. [NEW] ParticleTest: added test case for issue #893, free non-moving particles in retina mode would still move 
 . [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341), added assert to prevent 0 duration.
 . [FIX] Actions:
         CCAnimate: fixed low FPS bug, where multiple frames need to be set per 'tick'.
